Update visibility of EU funding and fix GA number

--- a/sites/all/themes/n52_wieu_theme/css/global-styles.css
+++ b/sites/all/themes/n52_wieu_theme/css/global-styles.css
@@ -265,18 +265,18 @@ div#eu-funding-footer {
 }
 
 div#eu-funding-footer-centralizer {
-  margin-left: auto;
   margin-right: auto;
 }
 
 div#eu-funding-footer-text {
-  margin-top: 25px;
-  float: left;
+  margin-top: 15px;
+  font-size: 90%;
 }
 
 div#eu-funding-footer-logo {
-  float: right;
-  padding-left: 10px;
+  float: left;
+  padding-right: 10px;
+  padding-left: 2px;
 }
 
 
